# lingible

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_SPEC_RULE.md  PROJECT_STRUCTURE.md  README.md  mypy.ini  pyrightconfig.json
backend/lambda/: README.md  RUN_MIGRATE_LEXICON.md  cleanup.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup-poetry.sh
backend/lambda/tests/: README.md  conftest.py  issues.md  test_apple_storekit_service.py  test_async_slang_validation.py  test_config_service.py  test_delete_translation_api_handler.py  test_delete_translations_api_handler.py  test_envelopes.py  test_error_codes.py  test_exceptions.py  test_export_lexicon_async_handler.py  test_export_lexicon_handler.py  test_get_translation_history_api_handler.py  test_handlers.py  test_health_api_handler.py  test_lexicon_repository.py  test_migration_script.py  test_models.py  test_quiz_answer_api_handler.py  test_quiz_config.py  test_quiz_end_api_handler.py  test_quiz_handlers.py  test_quiz_history_api_handler.py  test_quiz_models.py  test_quiz_progress_api_handler.py  test_quiz_question_api_handler.py  test_quiz_service.py  test_repositories.py  test_response_utils.py  test_services.py  test_slang_lexicon_service.py  test_slang_llm_service.py  test_slang_models.py  test_slang_services.py  test_slang_submission.py  test_slang_submission_service.py  test_slang_term_repository.py  test_slang_validation.py  test_slang_validation_async_handler.py  (+12 more)
backend/lambda/tests_v2/: __init__.py  conftest.py  test_base_model.py  test_config_service.py  (+7 more)
(+614 files in other folders)
