[tool.poetry]
name = "lingible-backend"
version = "0.1.0"
description = "Lingible backend Lambda functions"
authors = ["Lingible Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.40.20"
pydantic = "^2.11.7"
pydantic-core = "^2.33.2"
aws-lambda-powertools = {extras = ["parser", "logger", "tracer", "parameters"], version = "^3.19.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
moto = "^5.1.11"
black = "^25.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.1"
types-python-jose = "^3.5.0"
types-pyasn1 = "^0.6.0"
pre-commit = "^4.0.1"

[tool.poetry.group.receipt-validation.dependencies]
google-api-python-client = "^2.0.0"
google-auth = "^2.0.0"
googleapis-common-protos = "^1.70.0"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Add any CLI scripts here if needed
